[gd_scene load_steps=8 format=3 uid="uid://bf8o2vb0ocl7a"]

[ext_resource type="Theme" uid="uid://cvocwk6x1wj7h" path="res://config/themes/global.tres" id="1_oxhne"]
[ext_resource type="Script" uid="uid://ceuc5gqqad4ki" path="res://scripts/components/ui/text_input/text_input.gd" id="2_ghysm"]
[ext_resource type="FontFile" uid="uid://xme5aeq8q7r7" path="res://resources/fonts/caskaydia/CaskaydiaCoveNerdFont-Bold.ttf" id="2_w6vyh"]
[ext_resource type="Script" uid="uid://c74uhqwujehas" path="res://scripts/modules/button/general_button.gd" id="3_ghysm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_myd2p"]
bg_color = Color(0, 0, 0, 0.5882353)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ghysm"]
bg_color = Color(0.101960786, 0.101960786, 0.101960786, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w6vyh"]
bg_color = Color(0.101960786, 0.101960786, 0.101960786, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 0.3882353)

[node name="TextInput" type="PanelContainer"]
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_oxhne")
theme_override_styles/panel = SubResource("StyleBoxFlat_myd2p")
script = ExtResource("2_ghysm")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ghysm")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
custom_minimum_size = Vector2(420, 320)
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_w6vyh")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TextEdit" type="TextEdit" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
focus_mode = 3
placeholder_text = "Tulis sesuatu di sini.
Pisahkan tiap peserta
dengan Enter. Contoh:
Dian
Azka
Remu"
wrap_mode = 1
caret_blink = true
caret_draw_when_editable_disabled = true

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="BoxContainer" type="BoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="ConfirmLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer/CenterContainer/BoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 72)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_w6vyh")
text = "+ Berhasil ditambahkan"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 42

[node name="AddTextButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 42)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_w6vyh")
text = "ï‘—  Tambahkan"
script = ExtResource("3_ghysm")

[node name="CloseButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(148, 42)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_w6vyh")
text = "Kembali"
script = ExtResource("3_ghysm")
